# classifier-reborn

./: .gitignore  .rubocop.yml  .rubocop_todo.yml  .travis.yml  Cargo.toml  Dockerfile  Gemfile  Gemfile-java  Gemfile-jruby  History.markdown  LICENSE  README.markdown  Rakefile  classifier-reborn-java.gemspec  classifier-reborn-jruby.gemspec  classifier-reborn.gemspec
.github/workflows/: ci.yml
data/stopwords/: ar  bn  ca  da  de  en  hu  it  ja  nl  pl  pt  ru  tr  vi  zh
docs/: CNAME  _config.yml  bayes.md  development.md  index.md  lsi.md  validation.md
docs/_layouts/: default.html
docs/assets/css/: style.scss
lib/: classifier-reborn.rb
lib/classifier-reborn/: bayes.rb  category_namer.rb  lsi.rb  version.rb
lib/classifier-reborn/backends/: bayes_memory_backend.rb  bayes_redis_backend.rb  data_handler.rb  no_redis_error.rb
lib/classifier-reborn/extensions/: hasher.rb  (+7 more)
script/: bootstrap  cibuild  fmt  test
src/: lib.rs
test/: test_helper.rb
test/backends/: backend_common_tests.rb  backend_memory_test.rb  backend_redis_injected_test.rb  backend_redis_test.rb
test/bayes/: bayesian_common_benchmarks.rb  bayesian_common_tests.rb  bayesian_integration_test.rb  bayesian_memory_benchmark.rb  bayesian_memory_test.rb  bayesian_redis_benchmark.rb  bayesian_redis_test.rb  bayesian_test.rb
test/data/: test_data_loader.rb
test/extensions/: hasher_test.rb  matrix_test.rb  word_hash_test.rb  zero_vector_test.rb
test/fixtures/: bayes.txt  cats.txt  reference.yml
test/lsi/: lsi_test.rb  word_list_test.rb
test/validators/: classifier_validation.rb
(+18 files in other folders)
